<resources>
    <string name="app_name">ShoppingList</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="shopping_lists">Shopping Lists</string>
    <string name="date_picker_tooltip">Pick a date</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="shopping_list_name_hint">Shopping list name</string>
    <string name="list_of_groceries">List of groceries</string>
    <string name="grocery_name">Grocery name</string>
    <string name="grocery_quantity">Grocery quantity</string>
    <string name="archive">Archive</string>
</resources>